# credit-card-fraud-detection

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_training.ipynb  eda.py
